fix: replace deprecated URL(String) constructor with URI.create().toURL()